# Object-detection-and-feature-matching

./: .gitignore  CMakeLists.txt  EasyPeasyCV.cpp  README.md  run.sh  runAccuracy.sh  runGenerator.sh  runViolaJones.sh
Image_generated/: Mustard_bottleG.txt  Mustard_bottle_negative  Mustard_bottle_negativeG.txt  Power_drill  Power_drillG.txt  Power_drill_negative  Sugar_box  Sugar_box_negative  mustard_bottle (Copy).txt  mustard_bottle.txt  mustard_bottle.vec  mustard_bottleG.txt  mustard_bottleG.vec  mustard_bottle_negative.txt  mustard_bottle_negativeG.txt  opencv training code.txt  power_drillG.txt  power_drillG.vec  power_drill_negative.txt  power_drill_negativeG.txt  sugar_box.txt  sugar_boxG.txt  sugar_box_negative.txt  sugar_box_negativeG.txt
Image_generated/cascade_mustard_bottle24/: cascade.xml  stage1.xml  stage10.xml  stage3.xml  stage4.xml  stage7.xml
Image_generated/cascade_mustard_bottle60/: cascade.xml  stage12.xml  stage6.xml
Image_generated/cascade_mustard_bottle60_test/: cascade.xml  stage3.xml  stage7.xml
Image_generated/cascade_mustard_bottle90/: stage0.xml  stage3.xml  stage4.xml  stage6.xml
Image_generated/cascade_mustard_bottle_gray/: stage0.xml  stage1.xml  stage11.xml  stage13.xml  stage14.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Image_generated/cascade_mustard_bottle_gray40/: cascade.xml  stage0.xml  stage10.xml  stage11.xml  (+4 more)
LOG/: log_file_bounding_box_opencv  log_file_stupido
Output/: DetectionLog.txt
ViolaJonesModels/: Mustard_bottleG.txt  Power_drill_negative  Power_drill_negativeG.txt  Sugar_boxG.txt  Sugar_box_negativeG.txt  opencv training code.txt  power_drill.txt  power_drill.vec  sugar_boxG.vec
code/: Dataset.cpp  main  main.cpp
(+245 files in other folders)
